--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
 <body>  
 
-<header>
+<header class="cabecalho" >
 
 <h1>Meu dia favorito</h1>
 
+<img class="cabecalho-imagem" src="download.jpeg" alt="praia">
+
 </header>
-<img src="download.jpeg" alt="praia">
+
 
 Este dia foi um dos dia mais legal me diverti muito espero que se repita !!
   
